#
# This file is part of the TEN Framework project.
# See https://github.com/TEN-framework/ten_framework/LICENSE for license
# information.
#
ten_utils_output_libs = []

if (is_win) {
  ten_utils_output_libs += [
    "${root_out_dir}/ten_utils.dll",
    "${root_out_dir}/ten_utils.dll.lib",
  ]
} else if (is_mac) {
  ten_utils_output_libs += [ "${root_out_dir}/libten_utils.dylib" ]
} else if (is_linux) {
  ten_utils_output_libs += [ "${root_out_dir}/libten_utils.so" ]
}
