#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/ten_runtime/glob.gni")
import("//build/ten_runtime/ten.gni")
import("//third_party/curl/output_libs.gni")

ten_runtime_glob("msgpack_client") {
  file_list = [
    "msgpack_tcp.c",
    "tcp.c",
  ]
  deps = [ "//third_party/msgpack:msgpackc" ]
  include_dirs = [
    "//packages",
    "//tests/ten_runtime",
  ]
}

ten_runtime_glob("client") {
  file_list = []
  deps = [ ":msgpack_client" ]

  if (ten_enable_curl) {
    file_list += [
      "curl_connect.c",
      "http.c",
    ]

    if (curl_use_shared_lib == false) {
      # Please refer to https://github.com/curl/curl/issues/2196
      defines = [ "CURL_STATICLIB" ]
    }

    deps += [ "//third_party/curl" ]
  }

  include_dirs = [
    "//packages",
    "//tests/ten_runtime",
  ]
}
