#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
group("extension") {
  deps = [
    "ext_1",
    "ext_2",
    "ext_3",
    "ext_a",
    "ext_b",
    "ext_c",
    "ext_d",
  ]
}
