#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
group("install") {
  deps = [
    # "local_dependency_link",
    "mock_app",
    "mock_extension",

    # "template_mode_with_same_name_extension",
  ]
}
