#
# This file is part of the TEN Framework project.
# See https://github.com/TEN-framework/ten_framework/LICENSE for license
# information.
#
import("//build/ten_runtime/feature/test.gni")

ten_package_test_prepare_auxiliary_resources("tman_publish") {
  resources = [
    "//.gnfiles/build/scripts/cmd_exec.py=>common/cmd_exec.py",
    "__init__.py",
    "mock_extension/manifest.json",
    "test_case.py",
  ]
  deps = [ "//core/src/ten_manager" ]
}
