#
# Copyright © 2024 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to https://github.com/TEN-framework/ten_framework/LICENSE for more
# information.
#
import("//build/ten_runtime/glob.gni")
import("//build/ten_runtime/ten.gni")

glob("ten_unit_tests") {
  file_list = [
    "ten_error_test.cc",
    "ten_msg_test.cc",
    "ten_schema_test.cc",
  ]

  public_deps = [
    "//core/src/ten_utils",
    "//third_party/googlemock",
    "//third_party/googletest",
  ]
  include_dirs = [ "//core/include" ]
}

ten_executable("ten_runtime_unit_test") {
  output_dir = "${root_out_dir}/tests/standalone"

  deps = [
    ":ten_unit_tests",
    "//core/src/ten_runtime",
    "//core/src/ten_utils",
    "//tests/ten_runtime:copy_libraries_for_test",
  ]
  sources = [ "//third_party/googletest/src/gtest_main.cc" ]

  public_deps = [
    "//third_party/googlemock",
    "//third_party/googletest",
  ]
}

group("unit") {
  deps = [ ":ten_runtime_unit_test" ]
}
