#
# This file is part of the TEN Framework project.
# See https://github.com/TEN-framework/ten_framework/LICENSE for license
# information.
#
import("//build/ten_utils/options.gni")
import("//build/ten_utils/utils.gni")

ten_utils_glob("common") {
  no_current = true

  file_list = [ "test_utils.cpp" ]
}
