#
# This file is part of the TEN Framework project.
# See https://github.com/TEN-framework/ten_framework/LICENSE for license
# information.
#
import("//build/ten_utils/options.gni")
import("//build/ten_utils/utils.gni")

ten_utils_glob("unit") {
  no_current = true

  file_list = [
    "ten_base64_test.cc",
    "ten_list_test.cc",
    "ten_lock_test.cc",
    "ten_log_test.cc",
    "ten_macro_test.cc",
    "ten_manifest_test.cc",
    "ten_path_test.cc",
    "ten_random_test.cc",
    "ten_rbtree_test.cc",
    "ten_rwlock_test.cc",
    "ten_schema_test.cc",
    "ten_semver_test.cpp",
    "ten_sharedptr_test.cc",
    "ten_shm_test.cc",
    "ten_skiplist_test.cc",
    "ten_string_test.cc",
    "ten_thread_test.cc",
    "sm_test.cc",
  ]

  public_deps = [
    "//core/src/ten_utils/io/general/loops",
    "//third_party/googletest",
    "//third_party/nlohmann_json",
  ]

  deps = [ "//tests/ten_utils/common" ]

  include_dirs = [
    "//tests",
    "//tests/ten_utils",
  ]

  if (is_clang) {
    cflags_cc = [ "-Wno-c++11-narrowing" ]
  }
}
